@@ -6,7 +6,6 @@ import java.nio.file.Files;
 import java.nio.file.StandardCopyOption;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.skyve.CORE;
 import org.skyve.domain.types.DateOnly;
@@ -15,20 +14,35 @@ import org.skyve.impl.util.UtilImpl;
 import org.skyve.job.Job;
 import org.skyve.metadata.SortDirection;
 import org.skyve.util.FileUtil;
-import org.skyve.util.Util;
 
 import modules.admin.domain.DataMaintenance;
 
+/**
+ * Runs background backup generation and records progress for Data Maintenance.
+ */
 public class BackupJob extends Job {
+	private static final String COPY_BACKUP_FORMAT = "Copy Backup %s to %s";
+	private static final String DAILY_PREFIX = "DAILY_";
+	private static final String PROBLEMS_SUFFIX = "_PROBLEMS";
+
+	/**
+	 * Performs the cancel operation.
+	 * @return the operation result
+	 */
 	@Override
 	public String cancel() {
 		return null;
 	}
 
+	/**
+	 * Performs the execute operation.
+	 * @throws Exception if the operation fails
+	 */
 	@Override
+	@SuppressWarnings({"java:S3776", "java:S6541"}) // complexity OK
 	public void execute() throws Exception {
 		DateOnly now = new DateOnly();
-		DataMaintenance dm = DataMaintenance.newInstance();
+		DataMaintenance dm = createDataMaintenance();
 		File backupZip = null;
 		List<String> log = getLog();
 		String trace;
@@ -46,7 +60,7 @@ public class BackupJob extends Job {
 			// warn the user if no backup was set and shortcut out
 			trace = "No backup taken by the BackupJob as no retention periods were set on the Data Maintenance Backup/Restore tab.";
 			log.add(trace);
-			Util.LOGGER.info(trace);
+			LOGGER.info(trace);
 			setPercentComplete(0);
 			return;
 		}
@@ -54,24 +68,24 @@ public class BackupJob extends Job {
 		if (daily > 0) {
 			trace = "Take backup...";
 			log.add(trace);
-			Util.LOGGER.warning(trace);
-			org.skyve.impl.backup.BackupJob backupJob = new org.skyve.impl.backup.BackupJob();
+			LOGGER.warn(trace);
+			org.skyve.impl.backup.BackupJob backupJob = createBackupJob();
 			execute(backupJob);
 			backupZip = backupJob.getBackupZip();
 		} else {
 			trace = "No daily backup taken by the BackupJob as dailyBackupRetention in DataMaintenance is null or zero";
 			log.add(trace);
-			Util.LOGGER.warning(trace);
+			LOGGER.warn(trace);
 		}
 
 		if (backupZip != null) {
 			trace = "Backup made to zip " + backupZip.getAbsolutePath();
 			log.add(trace);
-			Util.LOGGER.warning(trace);
+			LOGGER.warn(trace);
 
 			// move the zip archive
 			File backupDir = backupZip.getParentFile();
-			File dailyZip = new File(backupDir, "DAILY_" + backupZip.getName());
+			File dailyZip = new File(backupDir, DAILY_PREFIX + backupZip.getName());
 			if (ExternalBackup.areExternalBackupsEnabled()) {
 				try {
 					ExternalBackup.getInstance().moveBackup(backupZip.getName(), dailyZip.getName());
@@ -79,8 +93,7 @@ public class BackupJob extends Job {
 					trace = String.format("Failed to move external backup for %s from %s to %s",
 							UtilImpl.ARCHIVE_NAME, backupZip.getName(), dailyZip.getName());
 					log.add(trace);
-					Util.LOGGER.warning(trace);
-					e.printStackTrace();
+					LOGGER.warn(trace, e);
 					org.skyve.impl.backup.BackupJob.emailProblem(log, trace);
 				}
 			} else {
@@ -89,7 +102,7 @@ public class BackupJob extends Job {
 				}
 				trace = String.format("Backup moved from %s to %s", backupZip.getAbsolutePath(), dailyZip.getAbsolutePath());
 				log.add(trace);
-				Util.LOGGER.info(trace);
+				LOGGER.info(trace);
 			}
 
 			// copy daily to weekly
@@ -104,20 +117,19 @@ public class BackupJob extends Job {
 						trace = String.format("Failed to copy external backup for %s from %s to %s",
 								UtilImpl.ARCHIVE_NAME, dailyZip.getName(), copy.getName());
 						log.add(trace);
-						Util.LOGGER.warning(trace);
-						e.printStackTrace();
+						LOGGER.warn(trace, e);
 						org.skyve.impl.backup.BackupJob.emailProblem(log, trace);
 					}
 				} else {
-					trace = String.format("Copy Backup %s to %s", backupZip.getAbsolutePath(), copy.getAbsolutePath());
+					trace = String.format(COPY_BACKUP_FORMAT, backupZip.getAbsolutePath(), copy.getAbsolutePath());
 					log.add(trace);
-					Util.LOGGER.info(trace);
+					LOGGER.info(trace);
 					FileUtil.copy(dailyZip, copy);
 				}
 			} else {
 				trace = "No weekly backup taken by the BackupJob as weeklyBackupRetention in DataMaintenance is null or zero";
 				log.add(trace);
-				Util.LOGGER.warning(trace);
+				LOGGER.warn(trace);
 			}
 			// copy daily to monthly
 			if (monthly > 0) {
@@ -131,21 +143,20 @@ public class BackupJob extends Job {
 						trace = String.format("Failed to copy external backup for %s from %s to %s",
 								UtilImpl.ARCHIVE_NAME, dailyZip.getName(), copy.getName());
 						log.add(trace);
-						Util.LOGGER.warning(trace);
-						e.printStackTrace();
+						LOGGER.warn(trace, e);
 						org.skyve.impl.backup.BackupJob.emailProblem(log, trace);
 					}
 				} else {
-					trace = String.format("Copy Backup %s to %s", backupZip.getAbsolutePath(), copy.getAbsolutePath());
+					trace = String.format(COPY_BACKUP_FORMAT, backupZip.getAbsolutePath(), copy.getAbsolutePath());
 					log.add(trace);
-					Util.LOGGER.info(trace);
+					LOGGER.info(trace);
 					FileUtil.copy(dailyZip, copy);
 				}
 			}
 			else {
 				trace = "No monthly backup taken by the BackupJob as monthlyBackupRetention in DataMaintenance is null or zero";
 				log.add(trace);
-				Util.LOGGER.warning(trace);
+				LOGGER.warn(trace);
 			}
 			// copy daily to yearly
 			if (yearly > 0) {
@@ -158,34 +169,44 @@ public class BackupJob extends Job {
 					} catch (@SuppressWarnings("unused") Exception e) {
 						trace = String.format("Failed to copy external backup from %s to %s", dailyZip.getName(), copy.getName());
 						log.add(trace);
-						Util.LOGGER.warning(trace);
+						LOGGER.warn(trace);
 						org.skyve.impl.backup.BackupJob.emailProblem(log, trace);
 					}
 				} else {
-					trace = String.format("Copy Backup %s to %s", backupZip.getAbsolutePath(), copy.getAbsolutePath());
+					trace = String.format(COPY_BACKUP_FORMAT, backupZip.getAbsolutePath(), copy.getAbsolutePath());
 					log.add(trace);
-					Util.LOGGER.info(trace);
+					LOGGER.info(trace);
 					FileUtil.copy(dailyZip, copy);
 				}
 			}
 
 			// cull daily
-			cull(backupDir, "DAILY_", daily);
-			cull(backupDir, "DAILY_", "_PROBLEMS", daily * 2);
+			cull(backupDir, DAILY_PREFIX, daily);
+			cull(backupDir, DAILY_PREFIX, PROBLEMS_SUFFIX, daily * 2);
 			// cull weekly
 			cull(backupDir, "WEEKLY_", weekly);
-			cull(backupDir, "WEEKLY_", "_PROBLEMS", weekly * 2);
+			cull(backupDir, "WEEKLY_", PROBLEMS_SUFFIX, weekly * 2);
 			// cull monthly
 			cull(backupDir, "MONTHLY_", monthly);
-			cull(backupDir, "MONTHLY_", "_PROBLEMS", monthly * 2);
+			cull(backupDir, "MONTHLY_", PROBLEMS_SUFFIX, monthly * 2);
 			// cull yearly
-			cull(backupDir, "YEARLY_", "_PROBLEMS", yearly * 2);
+			cull(backupDir, "YEARLY_", PROBLEMS_SUFFIX, yearly * 2);
 		}
 
 		setPercentComplete(100);
 		trace = String.format("Finished Backup of customer %s at %s", CORE.getUser().getCustomerName(), new Date());
 		log.add(trace);
-		Util.LOGGER.info(trace);
+		LOGGER.info(trace);
+	}
+
+	@SuppressWarnings("static-method") // test seam
+	protected DataMaintenance createDataMaintenance() {
+		return DataMaintenance.newInstance();
+	}
+
+	@SuppressWarnings("static-method") // test seam
+	protected org.skyve.impl.backup.BackupJob createBackupJob() {
+		return new org.skyve.impl.backup.BackupJob();
 	}
 
 	private void cull(File backupDir, String prefix, int retain)
@@ -204,7 +225,7 @@ public class BackupJob extends Job {
 						files[i].getAbsolutePath(),
 						Integer.valueOf(retain));
 				log.add(trace);
-				Util.LOGGER.info(trace);
+				LOGGER.info(trace);
 				FileUtil.delete(files[i]);
 			}
 		}
@@ -213,24 +234,24 @@ public class BackupJob extends Job {
 				final ExternalBackup externalBackup = ExternalBackup.getInstance();
 				final List<String> backups = externalBackup.listBackups();
 				final List<String> matchingBackups = backups.stream().filter(backup -> backup.matches(regex))
-						.collect(Collectors.toList());
+						.toList();
 				for (int i = retain, l = matchingBackups.size(); i < l; i++) {
 					String trace = String.format("Cull backup %s - retention is set to %d",
 							matchingBackups.get(i),
 							Integer.valueOf(retain));
 					log.add(trace);
-					Util.LOGGER.info(trace);
+					LOGGER.info(trace);
 					try {
 						ExternalBackup.getInstance().deleteBackup(matchingBackups.get(i));
 					} catch (@SuppressWarnings("unused") Exception e) {
 						trace = String.format("Failed to cull external backup %s", matchingBackups.get(i));
 						log.add(trace);
-						Util.LOGGER.warning(trace);
+						LOGGER.warn(trace);
 						org.skyve.impl.backup.BackupJob.emailProblem(log, trace);
 					}
 				}
 			} catch (Exception e) {
-				Util.LOGGER.warning("Failed to cull external backups " + e.getMessage());
+				LOGGER.warn("Failed to cull external backups {}", e.getMessage());
 			}
 		}
 	}
